--- a/pretalx_friendlycaptcha/templates/pretalx_friendlycaptcha/submission_captcha.html
+++ b/pretalx_friendlycaptcha/templates/pretalx_friendlycaptcha/submission_captcha.html
@@ -7,6 +7,7 @@
 {% block cfp_submission_header %}
     <script type="module" src="{% static "pretalx_friendlycaptcha/widget.module.min.js" %}" async defer ></script>
     <script nomodule src="{% static "pretalx_friendlycaptcha/widget.min.js" %}" async defer></script>
+    <link rel="stylesheet" href="{% static "pretalx_friendlycaptcha/widget.css" %}">
 {% endblock cfp_submission_header %}
 
 {% block inner %}
