--- a/pretalx_friendlycaptcha/templates/pretalx_friendlycaptcha/submission_captcha.html
+++ b/pretalx_friendlycaptcha/templates/pretalx_friendlycaptcha/submission_captcha.html
@@ -1,5 +1,6 @@
 {% extends "cfp/event/submission_base.html" %}
 
+{% load compress %}
 {% load i18n %}
 {% load static %}
 {% load rich_text %}
@@ -7,7 +8,9 @@
 {% block cfp_submission_header %}
     <script type="module" src="{% static "pretalx_friendlycaptcha/widget.module.min.js" %}" async defer ></script>
     <script nomodule src="{% static "pretalx_friendlycaptcha/widget.min.js" %}" async defer></script>
-    <link rel="stylesheet" href="{% static "pretalx_friendlycaptcha/widget.css" %}">
+    {% compress css %}
+      <link rel="stylesheet" href="{% static "pretalx_friendlycaptcha/widget.css" %}">
+    {% endcompress %}
 {% endblock cfp_submission_header %}
 
 {% block inner %}
