--- a/pretalx_friendlycaptcha/templates/pretalx_friendlycaptcha/settings.html
+++ b/pretalx_friendlycaptcha/templates/pretalx_friendlycaptcha/settings.html
@@ -1,15 +1,10 @@
 {% extends "orga/base.html" %}
-{% load bootstrap4 %}
 
 {% block extra_title %}FriendlyCaptcha Settings :: {% endblock extra_title %}
 
 {% block content %}
     <h2>FriendlyCaptcha Settings</h2>
 
-    <form method="post">
-        {% csrf_token %}
-        {% bootstrap_form form layout='event' %}
-        {% include "orga/includes/submit_row.html" %}
-    </form>
+    {% include "orga/includes/base_form.html" %}
 
 {% endblock content %}
